@@ -33,6 +33,7 @@ Changes Since 0.3.7
 * docutils/parsers/rst/directives/tables.py:
 
   - Added "list-table" directive.
+  - Caught empty CSV table bug.
 
 * docutils/writers/latex2e.py:
 
